--- a/assets/styles.css
+++ b/assets/styles.css
@@ -34,7 +34,7 @@ body {
 .div2 {
   grid-area: 4 / 1 / 12 / 5;
   background: url("https://i.pinimg.com/originals/3c/8a/7c/3c8a7c619945872e4c05d6433abb0758.jpg");
-  border: 2px solid black;
+  border: 3px solid black;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -98,7 +98,7 @@ body {
   .parent {
     display: flex;
     flex-direction: column;
-    height: 4000px;
+    height: 2800px;
   }
   #font
   {
@@ -109,6 +109,11 @@ body {
     height: 400px;
     max-width: 100vw;
     justify-content: center;
+    margin-bottom: 20px;
+  }
+  .div2
+  {
+    min-height:450px;
   }
   .div3
   {
@@ -134,6 +139,10 @@ body {
   }
   .div1{
     max-height:200px;
+  }
+  .div7
+  {
+    min-height:400px;
   }
   .div9
   {
